--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.6",
     "groq-sdk": "^0.35.0",
+    "ioredis": "^5.8.2",
     "next": "16.0.3",
     "openai": "^6.9.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
