--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.35.6",
+    "framer-motion": "^12.23.24",
     "groq-sdk": "^0.35.0",
     "ioredis": "^5.8.2",
     "next": "16.0.3",
